<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifspsaocarlos.sdm.kifurecorder.InstrucoesActivity">

    <TextView
        android:text="@string/instrucoes_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp" />

    <TextView
        android:text="@string/instrucoes_paragrafo1"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingTop="8dp" />
    <TextView
        android:text="@string/instrucoes_paragrafo2"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingTop="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingTop="16dp"
        android:text="@string/instrucoes_paragrafo3"
        android:textColor="@android:color/white" />
    <TextView
        android:text="@string/instrucoes_paragrafo4"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:paddingTop="16dp" />

</LinearLayout>
