<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifspsaocarlos.sdm.kifurecorder.TelaInicialActivity">

    <!-- http://stackoverflow.com/questions/7651912/android-center-textview-horizontally-in-linearlayout -->
    <TextView
        android:text="@string/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        />

    <Button
        android:id="@+id/btnIniciarRegistro"
        android:text="@string/btn_iniciar_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnTestes"
        android:text="@string/btn_testes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--<Button
        android:id="@+id/btnAjuda"
        android:text="@string/btn_ajuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

    <TextView
        android:text="@string/lbl_copyright"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:paddingTop="32dp" />

</LinearLayout>
