<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="br.edu.ifspsaocarlos.sdm.kifurecorder.RegistrarPartidaActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_registro"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dp"
        android:layout_gravity="center_vertical|right" >
        <Button
            android:id="@+id/btnVoltarUltimaJogada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnPausar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pausar" />
        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_finalizar_registro" />
        <Button
            android:id="@+id/btnVisualizarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_visualizar_registro" />
    </LinearLayout>

</FrameLayout>
